separate scroll overflow css fix to separate branch

--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -1,35 +1,3 @@
-/*Potential fix for forcing div scroll visibility:*/
-.frame::-webkit-scrollbar {
-    -webkit-appearance: none;
-}
-
-.frame::-webkit-scrollbar:vertical {
-    width: 11px;
-}
-
-.frame::-webkit-scrollbar:horizontal {
-    height: 11px;
-}
-
-.frame::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    border: 2px solid white; /* should match background, can't be transparent */
-    background-color: rgba(0, 0, 0, .5);
-}
-
-.frame::-webkit-scrollbar-track { 
-    background-color: #fff; 
-    border-radius: 8px; 
-}
- 
- .frame ul li {
-
-   max-height:63px;/*The important part*/
-    overflow-y:auto;/*Also...*/
-    overflow-x:hidden;/*And the end of the important part*/
-    }
-
-
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
